# CaveBot-ros

./: .gitmodules  camera_sync_checker.py  dualcam.launch.py
calibrationdata/: left.yaml  ost.txt  right.yaml
install/: local_setup.sh  setup.sh
install/camera_calibration/lib/camera_calibration/: tarfile_calibration
install/camera_calibration/share/camera_calibration/: package.sh  package.xml
install/camera_ros/lib/camera_ros/: camera_node
install/camera_ros/share/camera_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/cave_depth/lib/cave_depth/: hitnet_depth_node
install/cave_depth/share/cave_depth/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/costmap_queue/include/costmap_queue/: costmap_queue.hpp  limited_costmap_queue.hpp  map_based_queue.hpp
install/costmap_queue/share/costmap_queue/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  (+1 more)
install/libcamera/lib/: libcamera-base.so.0.5.2  libcamera.so.0.5.2
install/slam_toolbox/share/: rviz_plugins.xml  solver_plugins.xml
log/: latest_build
src/cave_cameras/: package.xml  setup.cfg  setup.py
src/cave_cameras/launch/: cameras.launch.py
src/cave_depth/: README.md  package.xml  setup.cfg  setup.py
src/cave_depth/cave_depth/: hitnet_depth_node.py
src/cave_depth/cave_depth/hitnet_lib/: requirements.txt  setup.py
src/cave_depth/launch/: depth.launch.py
src/dualcam_launch/: README.md  package.xml  setup.cfg  setup.py
src/dualcam_launch/launch/: stereo_pipeline.launch.py
(+2785 files in other folders)
