<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cave_depth</name>
  <version>0.0.1</version>
  <description>Dual camera launch package</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>
  <exec_depend>camera_ros</exec_depend>
  <exec_depend>stereo_image_proc</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <depend>rclpy</depend>
  <depend>stereo_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
