<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dualcam_launch</name>
  <version>0.0.1</version>
  <description>Dual camera launch package</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>
  <exec_depend>camera_ros</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
